<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonsLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:paddingBottom="16dp">

            <!-- Контейнер для большого StatsView -->
            <FrameLayout
                android:id="@+id/statsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ru.github.debitcredit.customview.StatsView
                    android:id="@+id/statsView"
                    android:layout_width="300dp"
                    android:layout_height="300dp" />

            </FrameLayout>

            <!-- TextView для отображения баланса -->
            <TextView
                android:id="@+id/balanceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/balance"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="22sp"
                android:textStyle="bold|italic"/>

            <LinearLayout
                android:id="@+id/predefinedCategoriesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingHorizontal="16dp" />

        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonsLayout"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"/>

    <LinearLayout
        android:id="@+id/bottomButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/incomeButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_ruble"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/income"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/addCategoryButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@android:drawable/ic_input_add"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/add_category"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>